--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "elaniin/findable",
+  "name": "theharisshah/findable",
   "description": "An SEO add-on for Statamic.",
   "minimum-stability": "stable",
   "license": "MIT",
